@@ -160,7 +160,7 @@
 <h2>TEMPLATE_SECTION_HEADER</h2>
 <p><em>Template for the section title in section mode.</em></p>
 <!-- ###SECTION_HEADER### begin -->
-	<div id="###ANCHOR_URL###" class="tx-indexedsearch-secHead">
+	<div id="###ANCHOR_URL###" class="tx-indexedsearch-secHead secHead-tmpl-css">
 		<h2 class="tx-indexedsearch-title title">###SECTION_TITLE### <span class="tx-indexedsearch-result-count result-count result-count-tmpl-css">###RESULT_COUNT### ###RESULT_NAME###</span></h2>
 	</div>
 
