@@ -1,3 +1,8 @@
+2006-04-06  Michael Stucki  <michael@typo3.org>
+
+	* Fixed bug #3132: preg_replace() compilation error
+	* Minor fixes to the CSS default style
+
 2006-03-26  Michael Stucki  <michael@typo3.org>
 
 	* Fix missing htmlspecialchars for section indexes
