@@ -1,3 +1,7 @@
+2006-04-06  Michael Stucki  <michael@typo3.org>
+
+	* Minor changes to Indexed Search, see local ChangeLog for details
+
 2006-04-04  Michael Stucki  <michael@typo3.org>
 
 	* Release of TYPO3 4.0rc3
